--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -114,24 +114,24 @@
 
     <div class="columns is-5">
       <div class="column">
-        <div class="testimonial testimonial_1">
-          <h2 class="testimonial__name is-size-4 has-text-weight-bold">{{ .Params.testimonial1__name }}</h2>
+        <div class="testimonial testimonial_4">
+          <h2 class="testimonial__name is-size-4 has-text-weight-bold">{{ .Params.testimonial4__name }}</h2>
             {{- partial "stars.html" .}}
-          <p class="block testimonial__text">{{ .Params.testimonial1 }}</p>
+          <p class="block testimonial__text">{{ .Params.testimonial4 }}</p>
         </div>
       </div>
       <div class="column">
         <div class="testimonial testimonial_2">
-          <h2 class="testimonial__name is-size-4 has-text-weight-bold">{{ .Params.testimonial2__name }}</h2>
+          <h2 class="testimonial__name is-size-4 has-text-weight-bold">{{ .Params.testimonial5__name }}</h2>
           {{- partial "stars.html" .}}
-        <p class="block testimonial__text">{{ .Params.testimonial2 }}</p>
+        <p class="block testimonial__text">{{ .Params.testimonial5 }}</p>
         </div>
       </div>
       <div class="column">
         <div class="testimonial testimonial_3">
-          <h2 class="testimonial__name is-size-4 has-text-weight-bold">{{ .Params.testimonial3__name }}</h2>
+          <h2 class="testimonial__name is-size-4 has-text-weight-bold">{{ .Params.testimonial6__name }}</h2>
           {{- partial "stars.html" .}}
-        <p class="block testimonial__text">{{ .Params.testimonial3 }}</p>
+        <p class="block testimonial__text">{{ .Params.testimonial6 }}</p>
         </div>
       </div>
     </div>
@@ -329,7 +329,7 @@
           data-error="Please,leave us a message."></textarea>
       </div>
       <div class="is-flex is-justified-center">
-        <input type="submit" class="button is-primary is-large my-5 has-text-centered" value="Get Your Quote Today">
+        <input type="submit" class="button is-primary is-large my-5 has-text-centered" value="Drop Us A Line">
       </div>
     </form>
   </div>
