--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,6 +16,8 @@
     <link rel="preload" href="{{ $.Site.BaseURL }}fonts/gravitas-one-v10-latin-regular.woff" as="font" crossorigin="anonymous" />
     <link rel="preload" href="{{ $.Site.BaseURL }}fonts/open-sans-v18-latin-regular.woff" as="font" crossorigin="anonymous" />
     <link rel="preload" href="{{ $.Site.BaseURL }}fonts/open-sans-v18-latin-600.woff" as="font" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     {{- partial "gtm-head.html" . }}
 </head>
