--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,14 +1,7 @@
 <nav class="desktop navbar" role="navigation" aria-label="main navigation">
 
-    <div class="container">
+    <div class="container is-flex is-row is-justified-center is-aligned-center">
 
-    <div class="navbar-brand is-flex is-row is-aligned-center">
-
-      <a class="menu_logo" href="{{ .Site.BaseURL }}">
-        <img src="{{ $.Site.Params.imagekit_base_url }}tr:w-250/{{ $.Site.Params.schema.logo }}" sizes="100vw"  alt="{{ .Site.Params.name }} logo">
-      </a>
-  
-    </div>
   
     <div id="navbarBasicExample" class="navbar-menu">
   
