--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -37,6 +37,7 @@ $family-secondary: "Open Sans", sans-serif;
 
 h1,h2,h3,h4 {
   font-family: $family-primary;
+  letter-spacing: 2px;
 }
 p, li, a {
   font-family: $family-secondary;
@@ -51,7 +52,7 @@ ul {
   font-size: 0.95rem;
 }
 .is-size-2 {
-  font-size: 2.5rem !important;
+  font-size: 4.5rem !important;
   text-transform: uppercase;
 }
 .is-size-2,
@@ -126,6 +127,16 @@ ul {
   .button {
     font-size: 1.1rem !important;
   }
+}
+/*---TESTIMONIALS --*/
+.overlay {
+  padding: 75px 0;
+  background-color: rgba(245,88,48, 1);
+}
+.section6 {
+  background-image: url(img/background.jpg);
+
+
 }
 /*----------*/
 /*---MENU---*/
@@ -215,13 +226,13 @@ ul {
   border-radius: 2px;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
   width: 100%;
-  min-height: 300px;
+  min-height: 270px;
   padding: 20px;
   color: black;
 
   .testimonial__icon {
-    width: 15px;
-    height: 15px;
+    width: 35px;
+    height: 35px;
     fill: #fdcc0d;
   }
   &__text {
