--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -219,6 +219,64 @@
       class="lazyload gallery__img" />
       
     </figure>
+
+<!-- New -->
+<figure class="gallery__item gallery__item--1">
+
+  <img
+  src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50,/IMG_1865_avUUpxpbce.jpg"
+  sizes="100vw"
+  data-srcset="
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250,/IMG_1865_avUUpxpbce.jpg 400w,
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,/IMG_1865_avUUpxpbce.jpg 768w,
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400,/IMG_1865_avUUpxpbce.jpg 1024w"
+  data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,/IMG_1865_avUUpxpbce.jpg 768w"
+  class="lazyload gallery__img" />
+
+  </figure>
+
+  <figure class="gallery__item gallery__item--3">
+
+    <img
+    src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50,/IMG_1860__1__SGJI8ABI19.jpg"
+    sizes="100vw"
+    data-srcset="
+    {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250,/IMG_1860__1__SGJI8ABI19.jpg 400w,
+    {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,/IMG_1860__1__SGJI8ABI19.jpg 768w,
+    {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400,/IMG_1860__1__SGJI8ABI19.jpg 1024w"
+    data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,/IMG_1860__1__SGJI8ABI19.jpg 768w"
+    class="lazyload gallery__img" />
+  
+  </figure>
+
+<figure class="gallery__item gallery__item--2">
+
+  <img
+  src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50,/IMG_1862_eeJuBlRpWj.jpg"
+  sizes="100vw"
+  data-srcset="
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250,/IMG_1862_eeJuBlRpWj.jpg 400w,
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,/IMG_1862_eeJuBlRpWj.jpg 768w,
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400,/IMG_1862_eeJuBlRpWj.jpg 1024w"
+  data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,/IMG_1862_eeJuBlRpWj.jpg 768w"
+  class="lazyload gallery__img" />
+
+</figure>
+
+<figure class="gallery__item gallery__item--4">
+
+  <img
+  src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50,/IMG_1806_rGxqF8JfM.jpg"
+  sizes="100vw"
+  data-srcset="
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250,/IMG_1806_rGxqF8JfM.jpg 400w,
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,/IMG_1806_rGxqF8JfM.jpg 768w,
+  {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400,/IMG_1806_rGxqF8JfM.jpg 1024w"
+  data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,/IMG_1806_rGxqF8JfM.jpg 768w"
+  class="lazyload gallery__img" />
+  
+</figure>
+<!-- Stay HEre-->
     <figure class="gallery__item gallery__item--5">
 
       <img
@@ -280,7 +338,7 @@
       class="is-size-2 has-text-weight-bold has-text-uppercase has-text-centered">
       {{ .Params.contact_heading }}
     </h2>
-    <p class="has-text-centered py-2 is-size-4">
+    <p class="has-text-centered py-2 is-size-4 has-text-black">
       {{ .Params.contact_desc | safeHTML }}
     </p>
   </div>
