--- a/layouts/_default/thank-you.html
+++ b/layouts/_default/thank-you.html
@@ -3,7 +3,7 @@
     <div class="is-flex is-column is-justified-center is-aligned-center">
         <h1 class="is-size-2">Thank you!</h1>
         <h2 class="is-size-3 py-5">We have received your message and will get back to you shortly.</h2>
-        <a href="https://www.brightestdays.ca" class="button is-primary">Go Back To Homepage</a>
+        <a href="{{ $.Site.BaseURL }}" class="button is-primary">Go Back To Homepage</a>
     </div>
 </header>
 {{ end }}
