delay on button

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -7,7 +7,6 @@
   
           <div class="is-flex is-column is-justified-center is-aligned-center py-5">
             
- 
               <img src="{{ $.Site.Params.imagekit_base_url }}tr:w-550/{{ $.Site.Params.schema.logo }}" sizes="100vw"  alt="{{ .Site.Params.name }} logo" data-aos="fade-up" data-aos-duration="800">
      
             <p class="subtitle has-text-centered my-2 has-text-capitalized" data-aos="fade" data-aos-duration="800" data-aos-delay="500">
@@ -30,10 +29,10 @@
             alt="{{ .Site.Params.name }}"
             />
           </div>
-          <div class="hero__cta--mobile" data-aos="fade-up" data-aos-duration="800">
+          <div class="hero__cta--mobile" data-aos="fade-up" data-aos-duration="800" data-aos-delay="1500">
             <a href="tel:{{ .Site.Params.schema.phone }}" class="button is-primary is-large">Call Now To Order</a>
           </div>
-          <div class="hero__cta--desktop" data-aos="fade-up" data-aos-duration="800">
+          <div class="hero__cta--desktop" data-aos="fade-up" data-aos-duration="800" data-aos-delay="1500">
             <a href="#menu" class="button is-primary is-large">Explore Our Menu</a>
           </div>
           </div>
