--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -86,7 +86,7 @@
 
 
 
-<section id="section6" class="has-text-white testimonials section6 " style="background-image:url(img/background.jpg);">
+<section id="section6" class="has-text-white testimonials section is-medium has-background-primary">
   <div class="overlay">
   <div class="container">
     <h2 class="has-text-centered is-size-2 has-text-uppercase has-text-white has-text-weight-bold">Testimonials</h2>
