--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -1,13 +1,13 @@
 <!-- Main Script -->
-<script type="text/javascript" src="https://unpkg.com/imagekit-javascript/dist/imagekit.min.js"></script>
-<script>
-  var imagekit = new ImageKit({
-    urlEndpoint: "https://ik.imagekit.io/supersonicsites/"
-});  
-</script>
 <script src="{{ $.Site.BaseURL }}js/lazysizes.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <script>
   AOS.init();
+</script>
+<script type="text/javascript" src="https://unpkg.com/imagekit-javascript/dist/imagekit.min.js" defer></script>
+<script>
+  var imagekit = new ImageKit({
+    urlEndpoint: "https://ik.imagekit.io/supersonicsites/"
+});  
 </script>
